--- a/sass/modules/_appointment-area.scss
+++ b/sass/modules/_appointment-area.scss
@@ -307,7 +307,8 @@
         &.style-2{
             .consultation-form{
                 .appointment-form{
-                    .input-box{
+                    .input-box,
+                    .form-btn{
                         p{
                             margin-bottom: 0;
                         }
